--- a/doozer/requirements.txt
+++ b/doozer/requirements.txt
@@ -9,6 +9,7 @@ importlib-resources
 koji
 kubernetes ~= 28.0
 kubernetes-asyncio ~= 28.0
+nest-asyncio >= 1.6.0
 openshift ~= 0.13.2
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-grpc
