--- a/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline-task.yaml
+++ b/art-cluster/pipelines/config/argocd/project/art-cd/fips-scanning/pipeline-task.yaml
@@ -28,7 +28,7 @@ spec:
         pip install stomp.py==8.1.0
         pip install setuptools==70.0.0
 
-        artcd -vv --dry-run scan-fips --data-path $(params.data_path) --all-images
+        artcd -vv scan-fips --data-path $(params.data_path) --all-images
 
       securityContext:
         runAsGroup: 0
@@ -47,6 +47,11 @@ spec:
             secretKeyRef:
               name: art-bot-config
               key: slack-api-token
+        - name: JIRA_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: openshift-art-jira-bot-token
+              key: token
   volumes:
     - name: art-bot-docker-config
       secret:
