--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,8 @@ ignore =
     W503,
     # missing whitespace around arithmetic operator
     E226,
+    # incompatible with black
+    E203, E701,
 
 exclude = build/*, *.ini, *.in, MANIFEST*, *.md, .eggs, .tox, .venv
 max-complexity = -1
