--- a/elliott/pyproject.toml
+++ b/elliott/pyproject.toml
@@ -81,6 +81,7 @@ tests = [
     "pytest>=6.2.1",
     "mypy>=0.812",
     "pylint",
+    "add-trailing-comma",
     "black",
     "isort>=5.0.0",
 ]
