--- a/ruff.toml
+++ b/ruff.toml
@@ -37,7 +37,39 @@ target-version = "py311"
 [lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
 select = ["E4", "E7", "E9", "F"]
-ignore = []
+ignore = [
+    # imported but unused
+    # __init__ often imports to make available
+    # but does not use
+    "F401",
+    # Line too long
+    "E501",
+    # module level import not at top of file
+    "E402",
+    # multiple imports on one line
+    "E401",
+    # class names should used CapWords
+    "N801",
+    # argument name should be lowercase
+    "N803",
+    # function name should be lowercase
+    "N802",
+    # variable in function should be lowercase
+    "N806",
+    # redefinition of unused
+    "F811"
+    # lambda
+    "E731",
+    # bare except
+    "E722",
+    # line break before binary operator
+    # See https://gitlab.com/pycqa/flake8/issues/466.
+    "W503",
+    # missing whitespace around arithmetic operator
+    "E226",
+    # conflicts with black/ruff
+    "E203",
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
