--- a/pyartcd/requirements.txt
+++ b/pyartcd/requirements.txt
@@ -3,7 +3,7 @@ aiofiles
 aiohttp[speedups] >= 3.6
 aiohttp_retry
 aioredlock >= 0.7.3
-click
+click == 8.1.8
 contextvars
 errata-tool ~= 1.31.0
 cryptography
